--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -8,8 +8,9 @@
       apt: name=software-properties-common state=present update_cache=yes cache_valid_time=43200
     # Install 
     - name: install packages
-      apt: state=latest
+      apt: 
         name: ['python3.8', 'postgresql', 'postgresql-client', 'libpq-dev', 'libpython3-stdlib', 'python3-pip'] 
+        state: latest
 
         # Install Psycopg2 to make PSQL work
     - name: Install Psycopg2 
@@ -26,21 +27,16 @@
       postgresql_user:
         name: "{{PSQL_USER}}"
         password: "{{PSQL_PASS}}"
-        role_attr_flags: "CREATEDB,NOSUPERUSER"
+        role_attr_flags: "CREATEDB,SUPERUSER,REPLICATION,BYPASSRLS,LOGIN"
 
-# Start the server
-    - name: Run the database
+# Server is running
+    - name: Ensure the PostgreSQL service is running
+      service: name=postgresql state=started enabled=yes
+
+# Create DB
+    - name: Create database
       become: yes
       become_user: postgres
-      shell: "/usr/lib/postgresql/10/bin/pg_ctl -D /var/lib/postgresql/10/main -l logfile start"
-      
-# Install the app, note: don't do these tasks with become sudo
-- hosts: webservers
-  become: yes
-  tasks:
-    - name: clone repo
-      git:
-        repo: "https://github.com/{{ github_user }}/{{ app_name }}.git"
-        dest: /home/{{ ansible_ssh_user }}/{{ app_name }}
-        update: yes # Does a git pull if the repo already exists
-        force: yes
+      postgresql_db:
+          name: "jojotest"
+          owner: "jojo"
